--- a/index.html
+++ b/index.html
@@ -1,23 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <nav class="container-fluid border border-danger">
-            NAVBAR
-        </nav>
-        <section class="container-fluid border border-success">
-            <div class="container-sm ms-container"></div>
+    <header class="container-fluid p-0">
+        <div class="container-fluid border border-danger p-0">
+            <nav class="container-md border border-info ms-nav-height">
+                NAVBAR
+            </nav>
+        </div>
+        <section class="container-fluid border border-success p-0">
+            <div class="container ms-container"></div>
         </section>
     </header>
     <main>
-        
+        <section>
+            <div class="container">
+                <h2 class="text-uppercase text-center fw-semibold mt-4 mb-3 ms_title-color">portfolio</h2>
+                <div class="row gy-4">
+                    <div class="col-12 col-md-6 col-lg-4 rounded-2">
+                        <img src="images/cabin.png" class="img-fluid rounded-2" alt="cabin">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 rounded-2">
+                        <img src="images/cake.png" class="img-fluid rounded-2" alt="cake">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 rounded-2">
+                        <img src="images/circus.png" class="img-fluid rounded-2" alt="circus">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 rounded-2">
+                        <img src="images/game.png" class="img-fluid rounded-2" alt="game">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 rounded-2">
+                        <img src="images/safe.png" class="img-fluid rounded-2" alt="safe">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 rounded-2">
+                        <img src="images/submarine.png" class="img-fluid rounded-2" alt="submarine">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="ms-section">
+            <div class="container w-75 ms-container">
+                <div class="row">
+                    <div class="col-12 col-md-6 border border-danger ms-height"></div>
+                    <div class="col-12 col-md-6 border border-danger ms-height"></div>
+                </div>
+            </div>
+        </section>
+        <section class="ms-section">
+            <div class="container w-75 ms-container">
+                <div class="row">
+                    <div class="col-12 border small-height">Name</div>
+                    <div class="col-12 border small-height">Email Address</div>
+                    <div class="col-12 border small-height">Phone Number</div>
+                    <div class="col-12 border small-height">Message</div>
+                    <div class="col-12 border small-height">Button</div>
+                </div>
+            </div>
+        </section>
+        <section class="container-fluid">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-12 col-md-4 ms-height border border-danger"></div>
+                    <div class="col-12 col-md-4 ms-height border border-danger"></div>
+                    <div class="col-12 col-md-4 ms-height border border-danger"></div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="container-fluid border small-height">
+        FOOTER
+    </footer>
 </body>
+
 </html>
