--- a/index.html
+++ b/index.html
@@ -47,12 +47,23 @@
                 </div>
             </div>
         </section>
-        <section class="ms-section">
+        <section class="ms_section">
             <div class="container w-75 ms-container">
                 <div class="row">
-                    <div class="col-12 col-md-6 border border-danger ms-height"></div>
-                    <div class="col-12 col-md-6 border border-danger ms-height"></div>
+                    <div class="col-12 col-md-6">
+                        <p class="fw-semibold text-light">Freelancer is a free bootstrap theme created by Start Bootstrap. 
+                        The download includes the complete source files including HTML, CSS, and 
+                        JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p class="fw-semibold text-light">
+                            Whether you're a student looking to showcase your work, a professional 
+                            looking to attract clients, or a graphic artist looking to share your 
+                            projects, this template is the perfect starting point!
+                        </p>
+                    </div>
                 </div>
+                <button type="button" class="btn btn-outline-light d-block m-auto ms_padding-bottom">Download</button>
             </div>
         </section>
         <section class="ms-section">
