--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -17,14 +20,19 @@
                 NAVBAR
             </nav>
         </div>
-        <section class="container-fluid border border-success p-0">
-            <div class="container ms-container"></div>
+        <section class="ms_section">
+            <div class="container ms-container">
+                <img src="images/avatar.svg" class="ms_myimg" alt="avatar">
+                <h1 class="text-uppercase text-light fw-semibold">start bootstrap</h1>
+                <div class="text-uppercase text-light fw-semibold fs-5">graphic artist - web designer - illustrator</div>
+            </div>
         </section>
     </header>
     <main>
         <section>
             <div class="container">
                 <h2 class="text-uppercase text-center fw-semibold mt-4 mb-3 ms_title-color">portfolio</h2>
+                <div class="star-container"></div>
                 <div class="row gy-4">
                     <div class="col-12 col-md-6 col-lg-4 rounded-2">
                         <img src="images/cabin.png" class="img-fluid rounded-2" alt="cabin">
@@ -48,22 +56,28 @@
             </div>
         </section>
         <section class="ms_section">
-            <div class="container w-75 ms-container">
-                <div class="row">
-                    <div class="col-12 col-md-6">
-                        <p class="fw-semibold text-light">Freelancer is a free bootstrap theme created by Start Bootstrap. 
-                        The download includes the complete source files including HTML, CSS, and 
-                        JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <p class="fw-semibold text-light">
-                            Whether you're a student looking to showcase your work, a professional 
-                            looking to attract clients, or a graphic artist looking to share your 
-                            projects, this template is the perfect starting point!
-                        </p>
+            <div class="container ms-container">
+                <!-- centra il contenuto --> 
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <p class="fw-semibold text-light">Freelancer is a free bootstrap theme created by Start
+                                    Bootstrap.
+                                    The download includes the complete source files including HTML, CSS, and
+                                    JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <p class="fw-semibold text-light">
+                                    Whether you're a student looking to showcase your work, a professional
+                                    looking to attract clients, or a graphic artist looking to share your
+                                    projects, this template is the perfect starting point!
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-outline-light d-block m-auto ms_padding-bottom">Download</button>
+                <button type="button" class="btn btn-outline-light d-block m-auto ms_padding-bottom"><i id="download" class="fa-solid fa-download"></i>Download</button>
             </div>
         </section>
         <section class="ms-section">
@@ -77,18 +91,16 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid">
-            <div class="container-md">
-                <div class="row">
-                    <div class="col-12 col-md-4 ms-height border border-danger"></div>
-                    <div class="col-12 col-md-4 ms-height border border-danger"></div>
-                    <div class="col-12 col-md-4 ms-height border border-danger"></div>
-                </div>
-            </div>
-        </section>
     </main>
     <footer class="container-fluid border small-height">
         FOOTER
+        <div class="container-md">
+            <div class="row">
+                <div class="col-12 col-md-4 ms-height border border-danger"></div>
+                <div class="col-12 col-md-4 ms-height border border-danger"></div>
+                <div class="col-12 col-md-4 ms-height border border-danger"></div>
+            </div>
+        </div>
     </footer>
 </body>
 
