--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -15,9 +15,14 @@
 
 <body>
     <header class="container-fluid p-0">
-        <div class="container-fluid border border-danger p-0">
-            <nav class="container-md border border-info ms-nav-height">
-                NAVBAR
+        <div class="container-fluid p-0 ms_bg-nav">
+            <nav class="container d-flex flex-row justify-content-between align-items-center ms_nav-height">
+                <div class="text-uppercase text-light fw-bold ms_click">start bootstrap</div>
+                <ul class="">
+                    <li>portfolio</li>
+                    <li>about</li>
+                    <li>contact</li>
+                </ul>
             </nav>
         </div>
         <section class="ms_section">
@@ -58,7 +63,7 @@
         <section class="ms_section">
             <div class="container">
                 <h2 class="text-uppercase text-light text-center fw-semibold mb-4">about</h2>
-                <!-- centra il contenuto della row--> 
+                <!-- centra il contenuto della row-->
                 <div class="row justify-content-center mb-4">
                     <div class="col-10">
                         <div class="row gy-2">
@@ -78,7 +83,8 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-outline-light d-block m-auto ms_padding-bottom"><i id="download" class="fa-solid fa-download"></i>Download</button>
+                <button type="button" class="btn btn-outline-light d-block m-auto ms_padding-bottom"><i id="download"
+                        class="fa-solid fa-download"></i>Download</button>
             </div>
         </section>
         <section class="ms_padding-section">
@@ -88,35 +94,71 @@
                     <div class="col-10">
                         <form class="mt-4" action="">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control border-top-0 border-end-0 border-start-0 rounded-0" id="floatingName" placeholder="name">
+                                <input type="text"
+                                    class="form-control border-top-0 border-end-0 border-start-0 rounded-0"
+                                    id="floatingName" placeholder="name">
                                 <label for="floatingName">Name</label>
-                              </div>
-                              <div class="form-floating mb-3">
-                                <input type="email" class="form-control border-top-0 border-end-0 border-start-0 rounded-0" id="floatingMail" placeholder="name@example.com">
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="email"
+                                    class="form-control border-top-0 border-end-0 border-start-0 rounded-0"
+                                    id="floatingMail" placeholder="name@example.com">
                                 <label for="floatingMail">Email Address</label>
-                              </div>
-                              <div class="form-floating mb-3">
-                                <input type="text" class="form-control border-top-0 border-end-0 border-start-0 rounded-0" id="floatingPhone" placeholder="+39">
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text"
+                                    class="form-control border-top-0 border-end-0 border-start-0 rounded-0"
+                                    id="floatingPhone" placeholder="+39">
                                 <label for="floatingPhone">Phone Number</label>
-                              </div>
-                              <div class="form-floating">
-                                <textarea class="form-control border-top-0 border-end-0 border-start-0 rounded-0" placeholder="Leave a message here" id="floatingTextarea" style="height: 200px;"></textarea>
+                            </div>
+                            <div class="form-floating">
+                                <textarea class="form-control border-top-0 border-end-0 border-start-0 rounded-0"
+                                    placeholder="Leave a message here" id="floatingTextarea"
+                                    style="height: 200px;"></textarea>
                                 <label for="floatingTextarea">Message</label>
-                              </div>
-                              <button class="btn btn-success ms_mybutton mt-3" type="submit">Send</button>
+                            </div>
+                            <button class="btn btn-success ms_mybutton mt-3" type="submit">Send</button>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="container-fluid border small-height">
-        FOOTER
-        <div class="container-md">
-            <div class="row">
-                <div class="col-12 col-md-4 ms-height border border-danger"></div>
-                <div class="col-12 col-md-4 ms-height border border-danger"></div>
-                <div class="col-12 col-md-4 ms-height border border-danger"></div>
+    <footer class="ms_bg-foot">
+        <div class="container pb-4 pb-md-3">
+            <div class="row justify-content-center pt-3">
+                <div class="col-11">
+                    <div class="row gy-2">
+                        <div class="col-12 col-md-4 text-center text-light">
+                            <div class="text-uppercase fw-semibold mb-1">location</div>
+                            <p class="lh-sm">2215 John Daniel Drive Clark,<br>MO 54243</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-center text-light mb-sm-4 mb-md-1">
+                            <div class="text-uppercase fw-semibold mb-2">around the web</div>
+                            <div class="d-flex flex-row justify-content-center">
+                                <span class="ms_my-icon ms_padding-icon"><i class="fa-brands fa-facebook-f"></i></span>
+                                <span class="ms_my-icon"><i class="fa-brands fa-google-plus-g"></i></span>
+                                <span class="ms_my-icon"><i class="fa-brands fa-twitter"></i></span>
+                                <span class="ms_my-icon"><i class="fa-brands fa-linkedin-in"></i></span>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4 text-center text-light">
+                            <div class="text-uppercase fw-semibold mb-1">about freelancer</div>
+                            <p class="lh-sm">Freelance is a freee to use, open source Bootstrap
+                                theme created by <a id="foot-link" href="#">Start Bootstrap</a>.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="ms_wrapper">
+            <div class="container pt-5 pb-5 pt-md-4 pb-md-4">
+                <div class="row justify-content-center">
+                    <div class="col-8 col-md-6 text-center text-light">
+                        <span class="ms_small-txt fw-semibold">Copyright &copy; Your Website 2019</span>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
